[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/MainLayout.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/map_thumbnails/Stage1 thumb/stage1thumb_unpressed.png" type="Texture" id=2]
[ext_resource path="res://scripts/StageSelect.gd" type="Script" id=3]
[ext_resource path="res://scripts/Stage.gd" type="Script" id=4]
[ext_resource path="res://scripts/StageData.gd" type="Script" id=5]
[ext_resource path="res://assets/map_thumbnails/Stage3 thumb/stage3_lock.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Atarian/SF Atarian System Extended.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/Atarian/SF Atarian System Extended Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/start_press.png" type="Texture" id=9]
[ext_resource path="res://assets/start.png" type="Texture" id=10]
[ext_resource path="res://assets/back.png" type="Texture" id=11]
[ext_resource path="res://assets/back_press.png" type="Texture" id=12]
[ext_resource path="res://assets/text_box.png" type="Texture" id=13]
[ext_resource path="res://assets/fonts/Atarian/SF Atarian System Bold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/map_thumbnails/Stage1 thumb/stage1thumb_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/map_thumbnails/Stage2 thumb/stage2_lock.png" type="Texture" id=16]
[ext_resource path="res://assets/map_thumbnails/Stage2 thumb/stage2thumb_unpressed.png" type="Texture" id=17]
[ext_resource path="res://assets/map_thumbnails/Stage2 thumb/stage2thumb_pressed.png" type="Texture" id=18]
[ext_resource path="res://assets/map_thumbnails/Stage3 thumb/stage3_unpressed.png" type="Texture" id=19]
[ext_resource path="res://assets/map_thumbnails/Stage3 thumb/stage3_pressed.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 7 )

[node name="StageSelect" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 480.0 ]
}

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="TweenPosition" type="Position2D" parent="."]
position = Vector2( 86.987, 283 )

[node name="MainLayout" parent="." instance=ExtResource( 1 )]

[node name="Title" parent="MainLayout" index="1"]
margin_left = 321.564
margin_right = 643.564
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Select Stage"

[node name="StageData" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 456.0
margin_top = 279.0
margin_right = 904.0
margin_bottom = 455.0
custom_constants/separation = 40
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Node2D" parent="StageData"]

[node name="TextureRect" type="TextureRect" parent="StageData/BG"]
margin_left = -42.198
margin_top = -60.6096
margin_right = 1049.8
margin_bottom = 656.391
rect_scale = Vector2( 0.45, 0.39 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Node2D" parent="StageData"]

[node name="Name" type="Label" parent="StageData/Content"]
margin_right = 448.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.368627, 0.368627, 0.368627, 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="StageData/Content"]
margin_top = 70.0
margin_right = 448.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.368627, 0.368627, 0.368627, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StageData/Content"]
margin_top = 127.0
margin_right = 448.0
margin_bottom = 176.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="StageData/Content/HBoxContainer"]
margin_left = 40.0
margin_right = 199.0
margin_bottom = 49.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )

[node name="Back" type="TextureButton" parent="StageData/Content/HBoxContainer"]
margin_left = 249.0
margin_right = 408.0
margin_bottom = 49.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="Vairengte" type="TextureButton" parent="."]
margin_left = 356.978
margin_top = 185.805
margin_right = 715.978
margin_bottom = 389.805
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 15 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Vairengte"]
position = Vector2( 3.05176e-05, 0 )

[node name="Lengpui" type="TextureButton" parent="."]
margin_left = 209.669
margin_top = 353.706
margin_right = 564.669
margin_bottom = 555.706
rect_scale = Vector2( 0.7, 0.7 )
disabled = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 16 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
stageId = 1

[node name="Position2D" type="Position2D" parent="Lengpui"]

[node name="Aizawl" type="TextureButton" parent="."]
margin_left = 506.403
margin_top = 352.972
margin_right = 866.403
margin_bottom = 555.972
rect_scale = Vector2( 0.7, 0.7 )
disabled = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
stageId = 1

[node name="Position2D" type="Position2D" parent="Aizawl"]
[connection signal="pressed" from="StageData/Content/HBoxContainer/Start" to="." method="_stage_select_start"]
[connection signal="pressed" from="StageData/Content/HBoxContainer/Back" to="." method="_stage_select_back"]

[editable path="MainLayout"]
